--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "mongoose": "^6.3.5",
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.5"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
