--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^7.2.2",
+    "cors": "^2.8.5",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "http-proxy-middleware": "^2.0.6",
     "mongodb": "^4.7.0",
     "mongoose": "^6.4.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.18"
+    "nodemon": "^1.19.4"
   }
 }
